--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "aos": "^2.3.4",
         "vue-router": "^3.3.4",
-        "vue-scrollto": "^2.18.1"
+        "vue-scrollto": "^2.18.1",
+        "vuex": "^3.5.1"
     }
 }
